k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zero-downtime-rollingupdate
  labels:
    app: zero-downtime-rollingupdate
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: zero-downtime-rollingupdate
  sessionAffinity: None
  type: NodePort
