k8s/destination-rule-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: zero-downtime-rollingupdate-dr
spec:
  host: zero-downtime-rollingupdate
  subsets:
    - labels:
        version: v1
      name: version-v1
    - labels:
        version: v2
      name: version-v2
    - labels:
        version: v3
      name: version-v3
