k8s/istio-virtual-service-v1-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: zero-downtime-rollingupdate
spec:
  hosts:
    - "*"
  gateways:
    - demo-gateway # Gateway will be overwritten on deployment.
  http:
    - route:
        - destination:
            host: zero-downtime-rollingupdate
            port:
              number: 8080
            subset: version-v1
          weight: 90
        - destination:
            host: zero-downtime-rollingupdate
            port:
              number: 8080
            subset: version-v2
          weight: 10
